fix: update default theme settings in tailwind.css to enable light mode by default and adjust dark mode preferences for improved user experience

--- a/frontend/@agora/agora/src/tailwind.css
+++ b/frontend/@agora/agora/src/tailwind.css
@@ -8,7 +8,7 @@
 @plugin "daisyui/theme" {
     /* https: //daisyui.com/theme-generator/#theme=eJx9lOtu4yAQhV8FWVppKzUIhvu-DbFxY9UxETja7q767iVQJbi4-5OZb87MHLD_dYs9u-5XN08vp7V77no_-3CI_cltwodDSRxtdAdKSEr517k__TT6ByKYEEDAFdbMPH2loaZloRkCybHg0NCspqHQstCMNnTvl9Ut670CaK5gPFdIKeqKS5jONvy5w5xl2AhEpcSGsh246ZB2T1WI1Gx0iRpqaZ33pKAQEIWJ0rt4O342k3KKwFBM9MZM2_c1W1oQSMYLwNrwlm2HL4ZyKPaYjT2Lu67Bzg97ePEy6UusCeywTYP_voZpGf2dFCSverspDljxhmy1VdamaSAmsdzME69p4Rgf6nlRKjiiItVIswN_NzxNRZpgtWnw24ZlWl4eDURuIBniGhujd9jv9NONGYFBqbrGheDDw_qirjWiLF1TS7ba5TXQ9JYBc_icPdhhusb04GbXr1mfBHeuU-Pk5mEnfvRvdTROf91GBoPY5O46VeLow-BuNL285cDgLuvpBuXT4qd4-8XQdBrcaK9zWme0c3TP3SW40YWYPpLXz9j7B40vUac */
     name: "light";
-    default: false;
+    default: true;
     prefersdark: false;
     color-scheme: "light";
     --color-base-100: oklch(98% 0.002 247.839);
@@ -45,12 +45,12 @@
     /* https: //daisyui.com/theme-generator/#theme=eJx9lOtu4yAQhV8FWVppKzUIhvu-DbFxY9UxETja7q767iVQJbi4-5OZb87MHLD_dYs9u-5XN08vp7V77no_-3CI_cltwodDSRxtdAdKSEr517k__TT6ByKYEEDAFdbMPH2loaZloRkCybHg0NCspqHQstCMNnTvl9Ut670CaK5gPFdIKeqKS5jONvy5w5xl2AhEpcSGsh246ZB2T1WI1Gx0iRpqaZ33pKAQEIWJ0rt4O342k3KKwFBM9MZM2_c1W1oQSMYLwNrwlm2HL4ZyKPaYjT2Lu67Bzg97ePEy6UusCeywTYP_voZpGf2dFCSverspDljxhmy1VdamaSAmsdzME69p4Rgf6nlRKjiiItVIswN_NzxNRZpgtWnw24ZlWl4eDURuIBniGhujd9jv9NONGYFBqbrGheDDw_qirjWiLF1TS7ba5TXQ9JYBc_icPdhhusb04GbXr1mfBHeuU-Pk5mEnfvRvdTROf91GBoPY5O46VeLow-BuNL285cDgLuvpBuXT4qd4-8XQdBrcaK9zWme0c3TP3SW40YWYPpLXz9j7B40vUac */
     name: "dark";
     default: false;
-    prefersdark: false;
+    prefersdark: true;
     color-scheme: "dark";
     --color-base-100: oklch(21% 0.006 56.043);
     --color-base-200: oklch(26% 0.007 34.298);
     --color-base-300: oklch(37% 0.01 67.558);
-    --color-base-content: oklch(21% 0.034 264.665);
+    --color-base-content: oklch(96% 0.001 286.375);
     --color-primary: oklch(43% 0.095 166.913);
     --color-primary-content: oklch(100% 0 0);
     --color-secondary: oklch(86% 0.127 207.078);
